Fixed input spacing on contact page and banner spacing on about page

--- a/css/mod.css
+++ b/css/mod.css
@@ -6,6 +6,10 @@ html {
 	font-family: 'Open Sans', sans-serif;
 }
 
+body{
+	background: #f8f8f8;
+}
+
 .column {
 	display: flex;
 	flex-wrap: wrap;
@@ -177,6 +181,10 @@ html {
 		flex: 1 1 auto;
 	}
 
+	.input-column{
+		margin-right: 10px;
+		margin-bottom: 10px;
+	}
 }
 
 @media (max-width: 30em) {
@@ -268,7 +276,9 @@ html {
 		margin: 30px 0px;
 	}
 
-	
+	.input-column{
+		margin-bottom: 10px;
+	}
 
 }
 
@@ -999,7 +1009,7 @@ h2{
 }
 
 .about-section2 {
-	margin: 25px 0px;
+	margin-top: 50px;
 	align-content: center;
 	text-align: center;
 }
@@ -1350,8 +1360,6 @@ a {
 	color: black;
 	padding: 25px 10px;
 	border: 1px solid white;
-
-
 }
 
 .write-review i:hover, i:focus {
